# MultiGP_Toolkit

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  RHmanager.py  UImanager.py  __init__.py  manifest.json  miniFPVscores.py  multigpAPI.py  pyproject.toml  versions.json
.github/workflows/: rhfest.yaml
MultiGP_Toolkit/: RHmanager.py  UImanager.py  __init__.py  datamanager.py  fpvscoresapi.py  manifest.json  miniFPVscores.py  multigpapi.py  rhcoordinator.py  rsexporter.py  rsimporter.py  uimanager.py
Multigp_Toolkit/: RHmanager.py  UImanager.py  manifest.json
custom_plugins/multigp_toolkit/: __init__.py  abstracts.py  enums.py  fpvscoresapi.py  manifest.json  multigpapi.py  rhcoordinator.py  rsexporter.py  rsimporter.py  uimanager.py
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_templates/autoapi/: index.rst
docs/usage/: install.rst  installation.rst
docs/usage/fpvscores/: index.rst
docs/usage/importing/: index.rst
docs/usage/install/: index.rst
docs/usage/pushing/: index.rst
docs/usage/running/: index.rst
docs/usage/setup/: index.rst
docs/usage/zippyq/: index.rst
multigp_toolkit/: __init__.py  abstracts.py  enums.py  fpvscoresapi.py  manifest.json  multigpapi.py  rhcoordinator.py  rsexporter.py  rsimporter.py  uimanager.py
