[tool.poetry]
name = "MultiGP Toolkit"
version = "3.1.0"
description = "MultiGP RaceSync connector for RotorHazard"
authors = ["Bryce Gruber <dev@brycegruber.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/i-am-grub/MultiGP_Toolkit"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.docs.dependencies]
sphinx = {version = "^8.1.3", python = "^3.10"}
sphinx-book-theme = {version = "^1.1.3", python = "^3.10"}
sphinx-substitution-extensions = {version = "^2025.1.2", python = "^3.10"}
sphinx-copybutton = {version = "^0.5.2", python = "^3.10"}
sphinx-autoapi = {version = "^3.4.0", python = "^3.10"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
